improved ui and added ability to retrive data fro backend

--- a/Frontend/src/CSS/Hero.css
+++ b/Frontend/src/CSS/Hero.css
@@ -4,7 +4,7 @@
     height: 100vh;
     padding: 4% 6%;
     position: sticky;
-    top: 8.2%;
+    top: 0;
     display: flex;
     justify-content: center;
     align-items: center;
