--- a/Frontend/src/CSS/JobCard.css
+++ b/Frontend/src/CSS/JobCard.css
@@ -1,6 +1,6 @@
 .jobCardWrap{
-    width: 32vw;
-    height: 25vw;
+    width: 460px;
+    height: 370px;
     border: 1px solid gray;
     border-radius: 12px;
     text-align: start;
@@ -8,30 +8,39 @@
     background-color: white;
     filter: drop-shadow(1rem 1rem 1rem rgba(0, 0, 0, 0.363));
 }
+.jobCardWrap div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: min(1vw,0.4rem);
+}
+.jobCardWrap div div{
+    flex-direction: column;
+}
 .jobType{
     color: rgb(69, 69, 69);
-    font-size: 0.9vw;
+    font-size: min(2vw,110%);
 }
 .jobTitle{
     font-weight: 500;
-    margin-bottom: 1vw;
-    font-size: 1.4vw;
+    margin-bottom: min(1vw,0.5rem);
+    font-size: min(3vw,130%);
 }
 .showDescriptionBtn{
     border: 1px solid gray;
     border-radius: 6px;
     padding: 1% 2%;
     font-weight: 600;
-    margin-bottom: 0.2vw;
-    font-size: 0.8vw;
+    margin-bottom: min(0.2vw,0.1rem);
+    font-size: min(1.5vw,70%);
 }
 .jobDescription{
-    font-size: 0.9vw;
-    margin-bottom: 1vw;
+    font-size: min(2vw,95%);
+    margin-bottom: min(1vw,0.4rem);
 }
 .jobButton{
-    width: 100%;
-    padding: 2% 6%;
+    width: min(30vw,14rem);
+    padding: 3% 6%;
     background-color: black;
     color: white;
     border-radius: 12px;
@@ -40,11 +49,49 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.2vw;
+    font-size: min(2.5vw,90%);
 }
 .jobLocation{
-    font-size: 0.9vw;
+    font-size: min(2vw,100%);
 }
 .jobSalary{
-    font-size: 0.9vw;
+    font-size: min(2vw,100%);
+}
+@media (max-width:1000px) {
+    
+}
+@media (max-width:1426px) {
+    .jobCardWrap{
+        width: min(90%,460vw);
+        height: min(45%,370px);
+        padding: 12px 12px;
+    }
+    /* .jobDescription{
+        font-size: min(2vw,80%);
+    }
+    .jobTitle{
+        font-size: min(3vw,110%);
+    }
+    .jobType{
+        font-size: min(2vw,90%);
+    }
+    .jobLocation{
+        font-size: min(2vw,80%);
+    }
+    .jobSalary{
+        font-size: min(2vw,80%);
+    }
+    .jobButton{
+        width: min(15vw,14rem);
+        padding: 3% 6%;
+        background-color: black;
+        color: white;
+        border-radius: 12px;
+        border: none;
+        margin-top: 1vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: min(2.5vw,90%);
+    } */
 }
