--- a/Frontend/src/CSS/NavBar.css
+++ b/Frontend/src/CSS/NavBar.css
@@ -1,64 +1,57 @@
-.navbar{
-    width: 100%;
-    height: min(15vw,66px);
-    background-color: rgb(0, 0, 0);
+header{
+    background-color: black;
+    color: #fff;
+    z-index: 90;
+    height: min(10vw,3.5rem);
+    /* height: 100%; */
+    position: sticky;
+    top: 0;
+}
+header div{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 16px 56px;
-    position: sticky;
-    top: 0px;
-    z-index: 50;
-    color: white;
+    padding: 0 6%;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+/* header details{
+    position: relative;
+} */
+header details summary{
+    list-style: none;
+    font-size: min(3vw,100%);
+}
+header details ul{
+    position: absolute;
+    width: 100%;
+    right: 0%;
+    top: 100%;
+    background-color: #fff;
+    list-style: none;
+    padding: 1vw 1vw;
+    border-radius: 12px;
 }
 .logo{
-    font-weight: 400;
-    font-size: min(5vw,180%);
+    font-weight: normal;
+    font-size: min(5vw,200%);
 }
-
-.tabs{
-    display: flex;
-    justify-content: space-between;
-    width: min(50vw,110%);
-    padding: 0;
-    /* gap:min(3vw,10%); */
-    list-style-type: none;
-    font-size: min(3vw,150%);
-    font-weight: 200;
+.nav-link{
+    color: #000;
+    text-decoration: none;
+    display: block;
+    width: 100%;
+    text-align: center;
+    padding: 0.6vw 2vw;
 }
-.slideMenu{
-    display: none;
-}
-@media (max-width:1000px) {
-    .tabs{
-        display: none;
-    }
-    .tabsSmall{
-        list-style: none;
-        background-color: #fff;
-        position: absolute;
-        top: 30px;
-        color: #000;
-        width: 40vw;
-        margin: 0;
-        padding: 1.5vw 1vw;
-    }
-    .tabsSmall>li{
-        margin: min(1vw) 0;
-    }
-    .navbar{
-        justify-content: space-between;
-    }
-    .slideMenu{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        list-style: none;
-    }
-    .slideMenu>details>summary{
-        list-style: none;
-    }
-    .slideMenu>details{
-        position: relative;
-    }
+.activeNavLink{
+    color: white;
+    background-color: black;
+    display: block;
+    width: 100%;
+    padding: 0.6vw 2vw;
+    text-align: center;
+    border-radius: 12px;
+    text-decoration: none;
 }
