--- a/Frontend/src/CSS/Page2.css
+++ b/Frontend/src/CSS/Page2.css
@@ -14,7 +14,7 @@
 .showcaseContainerTitle{
     color: white;
     font-weight: 500;
-    font-size: min(3.5vw,200%);
+    font-size: min(3.5vw,3rem);
     margin-right: 1rem;
 }
 .showcaseContainerTitle>span{
@@ -94,7 +94,7 @@
     background-image: url('https://images.unsplash.com/photo-1523275335684-37898b6baf30?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cHJvZHVjdHxlbnwwfHwwfHx8MA%3D%3D');
     background-size: cover;
     background-position: right;
-    filter: brightness(60%);
+    filter: brightness(80%);
 }
 .bento>div{
     width: 100%;
@@ -146,7 +146,7 @@
     .bentoContainer{
         margin-top: 5vw;
         width: 100%;
-        height: 80vw;
+        height: min(110vw,70vw);
         display: flex;
         gap: 2%;
     }
