--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -9,38 +9,6 @@ body{
   background-color: rgb(0, 0, 0);
 }
 .Link{
-  color: white;
+  color: rgb(0, 0, 0);
   text-decoration: none;
-  /* padding: 0.1rem 0.8rem; */
-  height: 0vw;
-}
-.Link2{
-  color: black;
-  text-decoration: none;
-  padding: 0.1rem 0.8rem;
-}
-.navLink{
-  color: white;
-  text-decoration: none;
-  padding: 0.1rem 0.1rem;
-  /* width: max-content; */
-  height: fit-content;
-}
-.activeLink{
-  background-color: white;
-  border-radius: 12px;
-  border: none;
-  padding: 0.1rem 0.1rem;
-  color: black;
-  height: fit-content;
-  text-decoration: none;
-}
-@media (max-width:1000px) {
-  .navLink{
-    color: #000;
-    width: 100%;
-  }
-  .activeLink{
-    color: #000;
-  }
 }
