--- a/Frontend/src/CSS/JobCard.css
+++ b/Frontend/src/CSS/JobCard.css
@@ -8,14 +8,50 @@
     background-color: white;
     filter: drop-shadow(1rem 1rem 1rem rgba(0, 0, 0, 0.363));
 }
+.jobCardWrapHome{
+    width: 460px;
+    height: 370px;
+    border: 1px solid gray;
+    border-radius: 12px;
+    text-align: start;
+    padding: 24px 26px;
+    background-color: white;
+    filter: drop-shadow(1rem 1rem 1rem rgba(0, 0, 0, 0.363));
+}
 .jobCardWrap div{
-    display: flex;
+    display: block;
     justify-content: space-between;
     align-items: center;
     margin-top: min(1vw,0.4rem);
 }
 .jobCardWrap div div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    gap: 5vw;
+}
+.jobCardWrap div div div{
+    gap: 0;
     flex-direction: column;
+}
+.jobCardWrapHome div{
+    display: block;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: min(1vw,0.4rem);
+}
+.jobCardWrapHome div div{
+    display: flex;
+    gap: 5vw;
+    /* flex-direction: column; */
+}
+.jobCardWrapHome div div div{
+    gap: 0;
+    flex-direction: column;
+}
+.jobCardWrapHome div div div div{
+    gap: 5vw;
 }
 .jobType{
     color: rgb(69, 69, 69);
@@ -23,7 +59,7 @@
 }
 .jobTitle{
     font-weight: 500;
-    margin-bottom: min(1vw,0.5rem);
+    margin-bottom: min(0.3vw,0.5rem);
     font-size: min(3vw,130%);
 }
 .showDescriptionBtn{
@@ -36,10 +72,11 @@
 }
 .jobDescription{
     font-size: min(2vw,95%);
-    margin-bottom: min(1vw,0.4rem);
+    margin-bottom: min(0.1vw,0.4rem);
 }
 .jobButton{
     width: min(30vw,14rem);
+    /* width: max-content; */
     padding: 3% 6%;
     background-color: black;
     color: white;
@@ -49,7 +86,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: min(2.5vw,90%);
+    font-size: min(2.5vw,95%);
 }
 .jobLocation{
     font-size: min(2vw,100%);
@@ -57,23 +94,21 @@
 .jobSalary{
     font-size: min(2vw,100%);
 }
-@media (max-width:1000px) {
-    
-}
-@media (max-width:1426px) {
-    .jobCardWrap{
-        width: min(90%,460vw);
-        height: min(45%,370px);
+@media (max-width:1438px) {
+    .jobCardWrapHome{
+        width: min(95vw);
+        /* height: min(40vw,11rem); */
+        height: max-content;
         padding: 12px 12px;
     }
-    /* .jobDescription{
+    .jobDescriptionHome{
         font-size: min(2vw,80%);
     }
-    .jobTitle{
-        font-size: min(3vw,110%);
+    .jobTitleHome{
+        font-size: min(3vw,100%);
     }
-    .jobType{
-        font-size: min(2vw,90%);
+    .jobTypeHome{
+        font-size: min(2vw,70%);
     }
     .jobLocation{
         font-size: min(2vw,80%);
@@ -82,8 +117,9 @@
         font-size: min(2vw,80%);
     }
     .jobButton{
-        width: min(15vw,14rem);
-        padding: 3% 6%;
+        width: min(20vw,14rem);
+        /* width: max-content; */
+        padding: 2% 6%;
         background-color: black;
         color: white;
         border-radius: 12px;
@@ -92,6 +128,43 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: min(2.5vw,90%);
-    } */
+        font-size: min(2.5vw,80%);
+    }
+    .showDescriptionBtn{
+        border: 1px solid gray;
+        border-radius: 6px;
+        padding: 0.1% 2%;
+        font-weight: 600;
+        margin-bottom: min(0.2vw,0.01rem);
+        font-size: min(1.5vw,60%);
+    }
+    .jobCardWrapHome div{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: min(1vw,0.4rem);
+    }
+}
+@media (max-width:1000px) {
+    .jobCardWrap{
+        width: min(90%,460vw);
+        /* height: min(45%,370px); */
+        height: min(40vw,13rem);
+        padding: 12px 12px;
+    }
+    .jobCardWrap div{
+        display: flex;
+        /* justify-content: space-between; */
+        /* align-items: center; */
+        margin-top: min(1vw,0.4rem);
+    }
+    .jobDescription{
+        font-size: min(2vw,80%);
+    }
+    .jobTitle{
+        font-size: min(3vw,110%);
+    }
+    .jobType{
+        font-size: min(2vw,90%);
+    }
 }
