--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -6,7 +6,7 @@
 body{
   width: 100%;
   overflow-x: hidden;
-  background-color: rgb(0, 0, 0);
+  background-color: #bebebe;
 }
 .Link{
   color: rgb(0, 0, 0);
