--- a/Frontend/src/CSS/SingelJobPage.css
+++ b/Frontend/src/CSS/SingelJobPage.css
@@ -2,9 +2,9 @@
     background-color: #bebebe;
     height: max-content;
     padding: 4% 6%;
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    gap: 3vw;
+    gap: 3vw; */
 }
 .jobInfo{
     background-color: #fff;
@@ -21,10 +21,28 @@
     background-color: #bebebe;
     margin: 2vw 0;
 }
+.backBtn{
+    width: max-content;
+    padding: 1% 2%;
+    border: none;
+    border-radius: 12px;
+    font-size: min(2.5vw,95%);
+    margin-bottom: 1vw;
+    filter: drop-shadow(1rem 1rem 1rem rgba(0, 0, 0, 0.363));
+}
 .jobInfoTitle{
     font-weight: normal;
     font-size: min(5vw,2rem);
     margin: 1vw 0;
+}
+.apply{
+    width: 50%;
+    padding: 1% 3%;
+    background-color: black;
+    color: #fff;
+    border: none;
+    border-radius: 12px;
+    font-size: min(2.5vw,95%);
 }
 .jobInfoTitle2{
     font-weight: 600;
